--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     text-align: center;
 
     max-width: 700px;
-    height: 900px;
+    height: auto;
     
     margin: 0 auto 200px;
     padding: 50px;
@@ -18,9 +18,10 @@
 .InputBox {
     
     border-radius: 15px;
-    outline-width: 2px;
-    outline-color: #0178ff;
+    outline-width: 0px;
+    border: 2px solid #0178ff;
 
     width: 70%;
-
+    padding: 20px;
+    margin: 20px;
 }
