--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 .InputBox {
     
     border-radius: 15px;
-    outline: 0;
+    outline: 0px;
     border: 2px solid #0178ff;
 
     width: 70%;
@@ -30,9 +30,9 @@
 
 .Button {
 
-    border-radius: 15;
-    outline: 0;
-    border: 0;
+    border-radius: 15px;
+    outline: 0px;
+    border: 0px;
 
     width: 35%;
     padding: 20px;
