--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@
     padding: 20px;
     margin: 10px;
 
+    box-sizing: border-box;
+
     font-size: 16px;
 }
 
@@ -37,6 +39,8 @@
     width: 30%;
     padding: 20px;
     margin: 10px;
+    
+    box-sizing: border-box;
     
     font-size: 18px;
     background-color: #0178ff;
