--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,8 @@
     margin: 10px 0px;
     padding: 10px;
 
+    box-sizing: border-box;
+    
     font-size: 24px;
     background-color: aliceblue;
     color: #0105ff;
