--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 #controlDiv {
     border-bottom: 3px solid #0178ff;
-    width: 100%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
 }
@@ -69,11 +69,12 @@
 
     font-size: 24px;
     background-color: aliceblue;
-    color: #0105ff;
+    color: #0178ff;
 
     cursor: pointer;
 }
 
 .Options:hover {
     background: #0178ff;
+    color: white;
 }
