--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,14 @@
     justify-content: space-between;
 }
 
+#usernameRequirementsDiv {
+    display: none;
+}
+
+#passwordRequirementsDiv {
+    display: none;
+}
+
 .InputBox {
     
     border-radius: 15px;
@@ -102,4 +110,12 @@
 .Selected:hover {
     background: #4501ff;
     color: white;
+}
+
+p.valid {
+    color: green;
+}
+
+p.invalid {
+    color: red;
 }
